@@ -127,6 +127,12 @@ $rcmail_config['sieverules_show_vachandle'] = FALSE;
 // FALSE -  a series of unrelated IF statements
 $rcmail_config['sieverules_use_elsif'] = TRUE;
 
+// Fileinto action options
+// 0 - List only subscribed folders
+// 1 - List subscribed and unsubscribed folders
+// 2 - List subscribed and unsubscribed folders and allow users to enter a folder name (for advanced users only)
+$rcmail_config['sieverules_fileinto_options'] = 0;
+
 // For information on customising the rule file see "The structure of the rule file" in the README
 // For information on customising the contents of the drop downs see "Default values for header, operator and flag drop downs" in the README
 
