@@ -181,5 +181,6 @@ $messages['filtercopied'] = 'Filter copied successfully';
 $messages['nosieverulesets'] = 'No rulesets found.';
 $messages['baddateformat'] = 'Error: Please enter the date in the format YYYY-MM-DD';
 $messages['badtimeformat'] = 'Error: Please enter the time in the format HH:MM:SS';
+$messages['missingfoldername'] = 'Error: Please enter a folder name';
 
 ?>
